# SemanticStratification

./: .gitignore  README.md  data.py  pyproject.toml  requirements.txt  split_log_random_camvid.csv  split_log_random_dummy.csv  split_log_wdes_camvid.csv  split_log_wdes_dummy.csv  test_stratsify.ipynb  train.py  utils.py
scripts/: train.sh
stratifiers/: ips.py  kfold.py  wdes.py
