[project]
name = "semantic-stratification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas==2.2.3",
  "tqdm==4.66.4",
  "scikit-learn>=1.7.0",
  "lightning>=2.5.1.post0",
  "torch>=2.7.1",
  "torchvision>=0.22.1",
  "segmentation-models-pytorch>=0.5.0",
  "deap==1.4.2",
  "wandb",
  "ipykernel>=7.0.1",
]


[dependency-groups]
dev = [
    "pip>=25.1.1",
    "pre-commit>=4.2.0",
]
